# s3_datastore

./: Pipfile  README.md  pyproject.toml  setup.cfg
s3_datastore/: fetch.py  upload.py  util.py
