[metadata]
name = s3_datastore
version = 0.9.0
description = Datastore upload and fetch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/its-core-applications/s3_datastore
author = Ezekiel Hendrickson
author_email = ezekielh@umich.edu
license = MIT

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages =
    s3_datastore
install_requires =
    boto3
    requests

[options.extras_require]
dev =
    pytest
    pytest-flake8

[options.entry_points]
console_scripts =
    datastore-fetch = s3_datastore.fetch:main
    datastore-upload = s3_datastore.upload:main

[tool:pytest]
addopts = -v --flake8
flake8-max-line-length = 160
